fix responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* outline: 1px solid red; */
+    outline: 1px solid red;
 }
 
 :root {
@@ -38,7 +38,7 @@ footer {
 
 main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100vm, 1fr));
     flex:1;
     align-content: flex-start;
 }
